--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -76,14 +76,14 @@
         </div>
         <div class="form-group">
             <div class="radio">
-                <div class="col-md-4 col-md-offset-1">
-                    <input type="radio" name="gender" id="male" value="M"/><label>Male</label>
+                <div class="col-md-4 col-md-offset-1 col-sm-4 col-sm-offset-1">
+                    <input type="radio" name="gender" id="male" value="M"><label for="male">Male</label>
                 </div>
-                <div class="col-md-3">
-                    <input type="radio" name="gender" id="female" value="F"/><label>Female</label>
+                <div class="col-md-3 col-sm-3">
+                    <input type="radio" name="gender" id="female" value="F"/><label for="female">Female</label>
                 </div>
-                <div class="col-md-3 col-md-offset-1">
-                    <input type="radio" name="gender" id="secret" value="" checked/><label>Secret</label>
+                <div class="col-md-3 col-md-offset-1 col-sm-3 col-sm-offset-1">
+                    <input type="radio" name="gender" id="secret" value="" checked/><label for="secret">Secret</label>
                 </div>
             </div>
         </div>
