--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
     <script type="text/javascript">
         function sendToken() {
             var token = $.cookie('token');
-            if (token !== null) {
+            if (token != null) {
                 $.post({
                     headers: {
                         "token": token
@@ -48,10 +48,10 @@
             });
         }
     </script>
-
     <style type="text/css">
         body{
             background: url("/icon/loginbg.jpg");
+            background-repeat: no-repeat;
             background-size:cover;
             font-size: 16px;
         }
@@ -66,17 +66,17 @@
 
 <body onload="sendToken()">
 <div class="container" style="margin-top: 200px">
-    <form role="form" id="login_form" class="col-md-offset-4 col-md-4 form form-horizontal">
+    <form role="form" id="login_form" class="col-md-offset-4 col-md-4 col-sm-offset-3 col-sm-6 form form-horizontal">
         <h2 class="text-center">oBook<small style="color: white">login</small></h2>
         <div class="form-group">
-            <img src="../static/icon/phone.png" th:src="@{/icon/phone.png}" class="col-md-2"/>
-            <div class="col-md-10">
+            <img src="../static/icon/phone.png" th:src="@{/icon/phone.png}" class="col-md-2 col-sm-1"/>
+            <div class="col-md-10 col-sm-10">
                 <input type="text" class="form-control" id="phone" placeholder="phone" required autofocus>
             </div>
         </div>
         <div class="form-group">
-            <img src="../static/icon/password.png" th:src="@{/icon/password.png}" class="col-md-2"/>
-            <div class="col-md-10">
+            <img src="../static/icon/password.png" th:src="@{/icon/password.png}" class="col-md-2 col-sm-1"/>
+            <div class="col-md-10 col-sm-10">
                 <input type="password" class="form-control" id="password" placeholder="password" minlength="6" required>
             </div>
         </div>
