--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>oBook</title>
-    <link th:href="@{/css/bootstrap.css}" href="../static/css/bootstrap.css" rel="stylesheet"/>
-    <link th:href="@{/css/bootstrap-theme.css}" href="../static/css/bootstrap-theme.css"
+    <link th:href="@{/css/bootstrap.min.css}" href="../static/css/bootstrap.min.css" rel="stylesheet"/>
+    <link th:href="@{/css/bootstrap-theme.min.css}" href="../static/css/bootstrap-theme.min.css"
           rel="stylesheet"/>
     <script th:src="@{/js/jquery-3.3.1.min.js}" src="../static/js/jquery-3.3.1.min.js"></script>
     <script th:src="@{/js/jquery.cookie.js}" src="../static/js/jquery.cookie.js"></script>
@@ -89,5 +89,139 @@
 
     </div>
 </nav>
+
+<div class="container" style="margin-top: 30px">
+    <div class="row">
+        <span style="font-size: 30px;padding-left:33px;">
+            Trending
+        </span>
+        <div style="font-size: 30px" class="glyphicon glyphicon-fire"></div>
+    </div>
+    <div class="row">
+        <div class="col-md-2 col-sm-2 hidden-xs hidden-sm" style="height: 400px;">
+        </div>
+        <div class="col-md-10 col-sm-10" style="padding-left: 10px;">
+            <div class="row">
+                <div class="col-md-6 hidden-xs hidden-sm" style="height:200px;width: 480px;">
+                    <a href="#"><img src="middle01.jpg" height="100%" width="100%"></a>
+                </div>
+                <div class="col-md-2 col-sm-4 col-xs-6" align="center">
+                    <a href="#"><img src="small03.jpg"></a>
+                    <a href="#"><p style="color: gray">电炖锅</p></a>
+                    <p style="color: red">￥399</font></p>
+                </div>
+                <div class="col-md-2 col-sm-4 col-xs-6" align="center">
+                    <a href="#"><img src="small03.jpg"></a>
+                    <a href="#"><p><font color="gray">电炖锅</p></a>
+                    <p><font color="red">￥399</font></p>
+                </div>
+                <div class="col-md-2 col-sm-4 col-xs-6" align="center">
+                    <a href="#"><img src="small03.jpg"></a>
+                    <a href="#"><p><font color="gray">电炖锅</p></a>
+                    <p><font color="red">￥399</font></p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-2 col-sm-4 col-xs-6" align="center">
+                    <a href="#"><img src="small03.jpg"></a>
+                    <a href="#"><p><font color="gray">电炖锅</p></a>
+                    <p><font color="red">￥399</font></p>
+                </div>
+                <div class="col-md-2 col-sm-4 col-xs-6" align="center">
+                    <a href="#"><img src="small03.jpg"></a>
+                    <a href="#"><p><font color="gray">电炖锅</p></a>
+                    <p><font color="red">￥399</font></p>
+                </div>
+                <div class="col-md-2 col-sm-4 col-xs-6" align="center">
+                    <a href="#"><img src="small03.jpg"></a>
+                    <a href="#"><p><font color="gray">电炖锅</p></a>
+                    <p><font color="red">￥399</font></p>
+                </div>
+                <div class="col-md-2 col-sm-4 col-xs-6" align="center">
+                    <a href="#"><img src="small03.jpg"></a>
+                    <a href="#"><p><font color="gray">电炖锅</p></a>
+                    <p><font color="red">￥399</font></p>
+                </div>
+                <div class="col-md-2 col-sm-4 col-xs-6" align="center">
+                    <a href="#"><img src="small03.jpg"></a>
+                    <a href="#"><p><font color="gray">电炖锅</p></a>
+                    <p><font color="red">￥399</font></p>
+                </div>
+                <div class="col-md-2 col-sm-4 col-xs-6" align="center">
+                    <a href="#"><img src="small03.jpg"></a>
+                    <a href="#"><p><font color="gray">电炖锅</p></a>
+                    <p><font color="red">￥399</font></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <span id="" style="font-size: 30px;padding-left:33px;">
+            Discount
+        </span>
+        <div style="font-size: 30px" class="glyphicon glyphicon-fire"></div>
+    </div>
+    <div class="row">
+        <div class="col-md-2 col-sm-2 hidden-xs hidden-sm" style="height: 400px;">
+        </div>
+        <div class="col-md-10 col-sm-10" style="padding-left: 10px;">
+            <div class="row">
+                <div class="col-md-6 hidden-xs hidden-sm" style="height:200px;width: 480px;">
+                    <a href="#"><img src="middle01.jpg" height="100%" width="100%"></a>
+                </div>
+                <div class="col-md-2 col-sm-4 col-xs-6" align="center">
+                    <a href="#"><img src="small03.jpg"></a>
+                    <a href="#"><p><font color="gray">电炖锅</p></a>
+                    <p><font color="red">￥399</font></p>
+                </div>
+                <div class="col-md-2 col-sm-4 col-xs-6" align="center">
+                    <a href="#"><img src="small03.jpg"></a>
+                    <a href="#"><p><font color="gray">电炖锅</p></a>
+                    <p><font color="red">￥399</font></p>
+                </div>
+                <div class="col-md-2 col-sm-4 col-xs-6" align="center">
+                    <a href="#"><img src="small03.jpg"></a>
+                    <a href="#"><p><font color="gray">电炖锅</p></a>
+                    <p><font color="red">￥399</font></p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-2 col-sm-4 col-xs-6" align="center">
+                    <a href="#"><img src="small03.jpg"></a>
+                    <a href="#"><p><font color="gray">电炖锅</p></a>
+                    <p><font color="red">￥399</font></p>
+                </div>
+                <div class="col-md-2 col-sm-4 col-xs-6" align="center">
+                    <a href="#"><img src="small03.jpg"></a>
+                    <a href="#"><p><font color="gray">电炖锅</p></a>
+                    <p><font color="red">￥399</font></p>
+                </div>
+                <div class="col-md-2 col-sm-4 col-xs-6" align="center">
+                    <a href="#"><img src="small03.jpg"></a>
+                    <a href="#"><p><font color="gray">电炖锅</p></a>
+                    <p><font color="red">￥399</font></p>
+                </div>
+                <div class="col-md-2 col-sm-4 col-xs-6" align="center">
+                    <a href="#"><img src="small03.jpg"></a>
+                    <a href="#"><p><font color="gray">电炖锅</p></a>
+                    <p><font color="red">￥399</font></p>
+                </div>
+                <div class="col-md-2 col-sm-4 col-xs-6" align="center">
+                    <a href="#"><img src="small03.jpg"></a>
+                    <a href="#"><p><font color="gray">电炖锅</p></a>
+                    <p><font color="red">￥399</font></p>
+                </div>
+                <div class="col-md-2 col-sm-4 col-xs-6" align="center">
+                    <a href="#"><img src="small03.jpg"></a>
+                    <a href="#"><p><font color="gray">电炖锅</p></a>
+                    <p><font color="red">￥399</font></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
