--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link th:href="@{/css/bootstrap.css}" href="../static/css/bootstrap.css" rel="stylesheet"/>
-    <link th:href="@{/css/bootstrap-theme.css}" href="../static/css/bootstrap-theme.css"
+    <link th:href="@{/css/bootstrap.min.css}" href="../static/css/bootstrap.min.css" rel="stylesheet"/>
+    <link th:href="@{/css/bootstrap-theme.min.css}" href="../static/css/bootstrap-theme.min.css"
           rel="stylesheet"/>
     <script th:src="@{/js/jquery-3.3.1.min.js}" src="../static/js/jquery-3.3.1.min.js"></script>
     <script th:src="@{/js/jquery.cookie.js}" src="../static/js/jquery.cookie.js"></script>
     <script th:src="@{/js/bootstrap.min.js}" src="../static/js/bootstrap.min.js"></script>
+    <script th:src="@{/js/obook.js}" src="../static/js/obook.js"></script>
     <script type="text/javascript">
         function sendToken() {
             var token = $.cookie('token');
