--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
-    <link th:href="@{/css/bootstrap.css}" href="../static/css/bootstrap.css" rel="stylesheet"/>
-    <link th:href="@{/css/bootstrap-theme.css}" href="../static/css/bootstrap-theme.css"
+    <link th:href="@{/css/bootstrap.min.css}" href="../static/css/bootstrap.min.css" rel="stylesheet"/>
+    <link th:href="@{/css/bootstrap-theme.min.css}" href="../static/css/bootstrap-theme.min.css"
           rel="stylesheet"/>
     <script th:src="@{/js/jquery-3.3.1.min.js}" src="../static/js/jquery-3.3.1.min.js"></script>
     <script th:src="@{/js/bootstrap.min.js}" src="../static/js/bootstrap.min.js"></script>
@@ -22,6 +22,7 @@
                 "nickname": $('#nickname').val(),
                 "idcard": $('#idcard').val(),
                 "realname": $('#realname').val(),
+                "ether_address": $('#ether_address').val(),
                 "gender": $('input:radio[name="gender"]:checked').val()
             };
             $.post({
@@ -72,6 +73,11 @@
         <div class="form-group">
             <div class="col-md-12">
                 <input type="text" class="form-control" name="realname" id="realname" placeholder="realname">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-12">
+                <input type="text" class="form-control" name="ether_address" id="ether_address" placeholder="ether address">
             </div>
         </div>
         <div class="form-group">
